--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -2,8 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Machine Learning @ Zeta</title>
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0"/>
+    <title>Machine Learning @ ZETA</title>
+    <style>
+            h1 {
+              font-size: 20px;
+            }
+            html {
+              height: 100%;
+            }
+            body {
+              width: 100%;
+              margin: 5% auto; 
+              background-image: linear-gradient(60deg, slateblue, lightblue);
+              color: #ffffff; 
+              font-family: 'Raleway Light';
+              font-size: 20px; 
+              line-height: 1.8; 
+              max-width: 73%;
+            }
+
+            header {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-direction: column;
+            }
+            a {
+              border-bottom: 1px solid #444444; 
+              color: #444444; 
+              text-decoration: none;
+            }
+        </style>
 </head>
+<div> 
+  <label style = "font-family:Raleway light,serif;font-size:50px;position:fixed;top:0;right:0;">HackMIT&nbsp;&nbsp;&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label><br> 
+  <label style = "font-family:Raleway Black,serif;font-size:50px;position:fixed;top:0;right:0;">ZETA&nbsp</label><br> 
+</div> 
 <body>
     <h1>Welcome to Zeta's Raspberry Pi. You can control your Pi here.</h1>
 </body>
