:bug: Adding a post request

--- a/src/templates/snapper.html
+++ b/src/templates/snapper.html
@@ -40,7 +40,7 @@
   <label style = "font-family:Raleway Black,serif;font-size:50px;position:fixed;top:0;right:0;">ZETA&nbsp</label><br> 
 </div> 
 <h1>
-  <form action="/api/snap_raspberry">
+  <form action="/api/snap_raspberry", method="POST">
    <label for="raspip">Raspberry Pi IP Address</label><br>
   <input type="text" style = "font-family:Oswald,serif;font-size:40px;font-style:Italic;" id="raspip" name="raspip" value="" placeholder="192.168.X.X"><br>
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="Prepare Connection">
