--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -43,14 +43,17 @@
   <form action="/api/color_raspberry">
   <label for="raspip">Detect Color&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
+  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/yuneqinugu.py" target = "_self">Detect Color</a>
   </form><br>
   <form action="/api/face_raspberry">
   <label for="raspip">Count Faces&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
+  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/ojepajacan.py" target = "_self">Count Faces</a>
   </form><br>
   <form action="/api/handwriting_raspberry">
   <label for="raspip">Read Handwriting&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
+  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/githubharald/SimpleHTR" target = "_self">Read Handwriting</a>
   </form><br>
 </h1>
 </html>
