--- a/src/templates/snapper.html
+++ b/src/templates/snapper.html
@@ -39,11 +39,19 @@
   <label style = "font-family:Raleway light,serif;font-size:50px;position:fixed;top:0;right:0;">HackMIT&nbsp;&nbsp;&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label><br> 
   <label style = "font-family:Raleway Black,serif;font-size:50px;position:fixed;top:0;right:0;">ZETA&nbsp</label><br> 
 </div> 
+
+<form action="/api/snap_raspberry" method="POST">
+
+  <div class="form-group">
+    <label>Raspberry Pi IP</label>
+    <input type="text" class="form-control" id="raspip" name="raspip" placeholder="192.168.X.X">
+  </div>
+
+  <button type="submit" class="btn btn-primary">Prepare Connection</button>
+
+
 <h1>
-  <form action="/api/snap_raspberry">
-   <label for="raspip">Raspberry Pi IP Address</label><br>
-  <input type="text" style = "font-family:Oswald,serif;font-size:40px;font-style:Italic;" id="raspip" name="raspip" value="" placeholder="192.168.X.X"><br>
-  <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="SNAP!">
-  </form>
+  Click on this link to snap!
 </h1>
+<a href={{data['url']}}>SNAP!</a>
 </html>
