some changes. too tired to document

--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -40,17 +40,17 @@
   <label style = "font-family:Raleway Black,serif;font-size:50px;position:fixed;top:0;right:0;">ZETA&nbsp</label><br> 
 </div> 
 <h1>
-  <form action="/api/color_raspberry">
+  <form action="/api/ml/color_recognition>
   <label for="raspip">Detect Color&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
   <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/yuneqinugu.py" target = "_self">Detect Color</a>
   </form><br>
-  <form action="/api/face_raspberry">
+  <form action="/api/ml/face_recognition">
   <label for="raspip">Count Faces&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
   <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/ojepajacan.py" target = "_self">Count Faces</a>
   </form><br>
-  <form action="/api/handwriting_raspberry">
+  <form action="/api/ml/writing_recognition">
   <label for="raspip">Read Handwriting&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
   <p>Source Code:&nbsp&nbsp<a href = "https://github.com/githubharald/SimpleHTR" target = "_self">Read Handwriting</a>
