--- a/src/templates/snapper.html
+++ b/src/templates/snapper.html
@@ -47,5 +47,11 @@
     <input type="text" class="form-control" id="raspip" name="raspip" placeholder="192.168.X.X">
   </div>
 
-  <button type="submit" class="btn btn-primary">Snap a Picture</button>
+  <button type="submit" class="btn btn-primary">Prepare Connection</button>
+
+
+<h1>
+  Click on this link to snap!
+</h1>
+<a href={{data['url']}}>SNAP!</a>
 </html>
