--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -40,7 +40,7 @@
   <label style = "font-family:Raleway Black,serif;font-size:50px;position:fixed;top:0;right:0;">ZETA&nbsp</label><br> 
 </div> 
 <h1>
-  <form action="/api/ml/color_recognition method="GET">
+  <form action="/api/ml/color_recognition" method="GET">
   <label for="raspip">Detect Color&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
   <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/yuneqinugu.py" target = "_self">Detect Color</a>
