--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -43,7 +43,7 @@
   <form action="/api/ml/classifier" method="GET">
   <label for="raspip">Classifier&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/yuneqinugu.py" target = "_self">Detect Color</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/upayetupor.py" target = "_self">Classify Images</a>
   </form><br>
   <form action="/api/ml/color_recognition" method="GET">
   <label for="raspip">Detect Color&nbsp&nbsp</label> 
@@ -53,12 +53,12 @@
   <form action="/api/ml/face_recognition" method="GET">
   <label for="raspip">Count Faces&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/ojepajacan.py" target = "_self">Count Faces</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/japepujita.py" target = "_self">Count Faces</a>
   </form><br>
   <form action="/api/ml/writing_recognition" method="GET">
   <label for="raspip">Read Handwriting&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/githubharald/SimpleHTR" target = "_self">Read Handwriting</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/1sigmoid/zeta-backend/tree/master/src/machine_learning/handwriting_recognition" target = "_self">Read Handwriting</a>
   </form><br>
 </h1>
 </html>
