--- a/src/templates/ml_page.html
+++ b/src/templates/ml_page.html
@@ -43,17 +43,17 @@
   <form action="/api/ml/classifier" method="GET">
   <label for="raspip">Classifier&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/upayetupor.py" target = "_self">Classify Images</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/1sigmoid/zeta-backend/blob/master/src/machine_learning/image_classification/vision.py" target = "_self">Classify Images</a>
   </form><br>
   <form action="/api/ml/color_recognition" method="GET">
   <label for="raspip">Detect Color&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/yuneqinugu.py" target = "_self">Detect Color</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/1sigmoid/zeta-backend/blob/master/src/machine_learning/color_detection/detect.py" target = "_self">Detect Color</a>
   </form><br>
   <form action="/api/ml/face_recognition" method="GET">
   <label for="raspip">Count Faces&nbsp&nbsp</label> 
   <input type="submit" style = "font-family:Raleway Light,serif;font-size:15px;" value="GO">
-  <p>Source Code:&nbsp&nbsp<a href = "https://hastebin.com/japepujita.py" target = "_self">Count Faces</a>
+  <p>Source Code:&nbsp&nbsp<a href = "https://github.com/1sigmoid/zeta-backend/blob/master/src/machine_learning/face_detection/detect.py" target = "_self">Count Faces</a>
   </form><br>
   <form action="/api/ml/writing_recognition" method="GET">
   <label for="raspip">Read Handwriting&nbsp&nbsp</label> 
